# finance-agent-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: settings.py
app/api/: container.py  error_handlers.py  main.py  schemas.py  security.py
app/api/routes/: chat.py  health.py
app/application/: agent_loop.py  chat_service.py  ports.py  prompts.py  tools.py
app/domain/: errors.py  models.py
app/infrastructure/guardrails/: rule_based_guardrail.py
app/infrastructure/llm/: claude_chat_model.py
app/infrastructure/market_data/: yfinance_adapter.py
app/infrastructure/persistence/: memory_repository.py  redis_repository.py
app/infrastructure/rate_limit/: memory_rate_limiter.py  redis_rate_limiter.py
app/infrastructure/telemetry/: composite_telemetry.py  file_telemetry.py  logging_telemetry.py
tests/: conftest.py  test_agent_loop.py  test_api.py  test_chat_service.py  test_guardrail.py  test_telemetry.py
